--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(10_TCPclient VERSION 0.1 LANGUAGES CXX)
+project(TCPclient VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -12,7 +12,10 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 
-find_package(Qt6 COMPONENTS Widgets Network REQUIRED)
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS   Widgets
+                                                    Network)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS  Widgets
+                                                        Network)
 
 
 set(PROJECT_SOURCES
@@ -26,14 +29,43 @@ set(PROJECT_SOURCES
 )
 
 
-qt_add_executable(10_TCPclient
-    MANUAL_FINALIZATION
-    ${PROJECT_SOURCES}
+if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
+    qt_add_executable(TCPclient
+        MANUAL_FINALIZATION
+        ${PROJECT_SOURCES}
+    )
+
+
+# Define target properties for Android with Qt 6 as:
+#    set_property(TARGET testQt APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
+# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
+else()
+    if(ANDROID)
+        add_library(TCPclient SHARED
+            ${PROJECT_SOURCES}
+        )
+# Define properties for Android with Qt 5 after find_package() calls as:
+#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
+    else()
+        add_executable(TCPclient
+            ${PROJECT_SOURCES}
+        )
+    endif()
+endif()
+
+target_link_libraries(TCPclient PRIVATE  Qt${QT_VERSION_MAJOR}::Widgets
+                                         Qt${QT_VERSION_MAJOR}::Network)
+
+
+set_target_properties(TCPclient PROPERTIES
+    MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
+    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
+    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
+    MACOSX_BUNDLE TRUE
+    WIN32_EXECUTABLE TRUE
 )
 
-
-target_link_libraries(10_TCPclient PRIVATE Qt6::Widgets
-                                           Qt6::Network)
-
-qt_finalize_executable(10_TCPclient)
-
+if(QT_VERSION_MAJOR EQUAL 6)
+    qt_finalize_executable(TCPclient)
+endif()
